overflow fix

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+  overflow-x: hidden;
+  
+}
 .navbar{
  position: sticky;
 top: 0; 
